<resources>
    <string name="app_name">TTRPG chat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="text_login">Login</string>
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="text_password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>


    <string name="add_image">Add image</string>
    <string name="create_account">Create new account</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="select_user">SelectUser</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>